--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "questionary>=2.1.0",
     "rich>=14.0.0",
     "typer>=0.16.0",
 ]
